gatekeeper/templates/constrainttemplates/require-cpu-limit-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredcpu
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredCPU
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredcpu

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          not container.resources.limits.cpu
          msg := sprintf("CPU limit is required for container %s", [container.name])
        }
